sf-ai-orchestrator/force-app/main/default/objects/AI_Step__c/AI_Step__c.object-meta.xml
<CustomObject>
    <description>A single AI inference step within an AI Workflow. Steps execute in order.</description>
    <label>AI Step</label>
    <nameField>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>