sf-ai-orchestrator/force-app/main/default/objects/AI_Step__c/fields/AI_Provider_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>AI_Provider_Developer_Name__c</fullName>
    <description>DeveloperName of AI_Provider__mdt record to use for this step</description>
    <label>AI Provider (Developer Name)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>