sf-ai-orchestrator/force-app/main/default/objects/AI_Step__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>Optional condition to skip this step. Evaluated as a boolean expression against execution context.</description>
    <label>Condition (Apex Boolean Expression)</label>
    <type>TextArea</type>
</CustomField>