sf-ai-orchestrator/force-app/main/default/objects/AI_Step__c/fields/Max_Tokens_Override__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens_Override__c</fullName>
    <label>Max Tokens Override</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>