sf-ai-orchestrator/force-app/main/default/objects/AI_Step__c/fields/Model_Override__c.field-meta.xml
<CustomField>
    <fullName>Model_Override__c</fullName>
    <description>Override the default model from the provider config</description>
    <label>Model Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>