sf-ai-orchestrator/force-app/main/default/objects/AI_Step__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Execution order within the workflow (1 = first)</description>
    <label>Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>