sf-ai-orchestrator/force-app/main/default/objects/AI_Step__c/fields/Output_Field__c.field-meta.xml
<CustomField>
    <fullName>Output_Field__c</fullName>
    <description>Field on the trigger record to write the AI response to (FLS enforced)</description>
    <label>Output Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>