sf-ai-orchestrator/force-app/main/default/objects/AI_Step__c/fields/Prompt_Template__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Template__c</fullName>
    <description>Prompt text. Use {{Object.Field}} syntax for variable interpolation.</description>
    <label>Prompt Template</label>
    <length>131072</length>
    <required>true</required>
    <type>LongTextArea</type>
</CustomField>