sf-ai-orchestrator/force-app/main/default/objects/AI_Step__c/fields/Response_Format__c.field-meta.xml
<CustomField>
    <fullName>Response_Format__c</fullName>
    <label>Response Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TEXT</fullName>
                <default>true</default>
                <label>Plain Text</label>
            </value>
            <value>
                <fullName>JSON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>