sf-ai-orchestrator/force-app/main/default/objects/AI_Step__c/fields/Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Step_Type__c</fullName>
    <label>Step Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI_INFERENCE</fullName>
                <default>true</default>
                <label>AI Inference</label>
            </value>
            <value>
                <fullName>DECISION</fullName>
                <label>Decision</label>
            </value>
            <value>
                <fullName>HTTP_CALLOUT</fullName>
                <label>HTTP Callout</label>
            </value>
            <value>
                <fullName>APEX_ACTION</fullName>
                <label>Apex Action</label>
            </value>
            <value>
                <fullName>FLOW_LAUNCH</fullName>
                <label>Launch Flow</label>
            </value>
            <value>
                <fullName>WAIT</fullName>
                <label>Wait</label>
            </value>
            <value>
                <fullName>LOOP</fullName>
                <label>Loop</label>
            </value>
            <value>
                <fullName>SUBFLOW</fullName>
                <label>Sub-Workflow</label>
            </value>
            <value>
                <fullName>NOTIFICATION</fullName>
                <label>Notification</label>
            </value>
            <value>
                <fullName>START</fullName>
                <label>Start</label>
            </value>
            <value>
                <fullName>END</fullName>
                <label>End</label>
            </value>
            <value>
                <fullName>INFERENCE</fullName>
                <label>AI Inference (Legacy)</label>
                <isActive>false</isActive>
            </value>
            <value>
                <fullName>CLASSIFICATION</fullName>
                <label>Classification (Legacy)</label>
                <isActive>false</isActive>
            </value>
            <value>
                <fullName>SUMMARIZATION</fullName>
                <label>Summarization (Legacy)</label>
                <isActive>false</isActive>
            </value>
            <value>
                <fullName>SENTIMENT</fullName>
                <label>Sentiment Analysis (Legacy)</label>
                <isActive>false</isActive>
            </value>
            <value>
                <fullName>EXTRACTION</fullName>
                <label>Data Extraction (Legacy)</label>
                <isActive>false</isActive>
            </value>
            <value>
                <fullName>TRANSLATION</fullName>
                <label>Translation (Legacy)</label>
                <isActive>false</isActive>
            </value>
            <value>
                <fullName>EMBEDDING</fullName>
                <label>Embedding (Legacy)</label>
                <isActive>false</isActive>
            </value>
            <value>
                <fullName>CUSTOM</fullName>
                <label>Custom (Legacy)</label>
                <isActive>false</isActive>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>