sf-ai-orchestrator/force-app/main/default/objects/AI_Step__c/fields/System_Prompt__c.field-meta.xml
<CustomField>
    <fullName>System_Prompt__c</fullName>
    <description>System-level instruction for the AI model (supported by most providers)</description>
    <label>System Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>