sf-ai-orchestrator/force-app/main/default/objects/AI_Step__c/fields/Temperature_Override__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Override__c</fullName>
    <label>Temperature Override</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>